[gd_scene load_steps=7 format=2]

[ext_resource path="res://scenes/menus/title_screen.gd" type="Script" id=1]
[ext_resource path="res://resources/img/title.png" type="Texture" id=2]
[ext_resource path="res://scenes/menus/glitchy.shader" type="Shader" id=3]
[ext_resource path="res://resources/img/white.png" type="Texture" id=4]
[ext_resource path="res://scenes/ui_theme.tres" type="Theme" id=5]

[sub_resource type="ShaderMaterial" id=2]

render_priority = 0
shader = ExtResource( 3 )
shader_param/size_x = null
shader_param/size_y = null

[node name="Title Screen" type="Node" index="0"]

script = ExtResource( 1 )

[node name="Background" type="Sprite" parent="." index="0"]

position = Vector2( 640, 360 )
texture = ExtResource( 2 )
_sections_unfolded = [ "Transform" ]

[node name="Shader" type="TextureRect" parent="." index="1"]

visible = false
material = SubResource( 2 )
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
texture = ExtResource( 4 )
expand = true
stretch_mode = 0
_sections_unfolded = [ "Margin", "Material" ]

[node name="CenterContainer" type="CenterContainer" parent="." index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 1280.0
margin_bottom = 720.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
use_top_left = false
_sections_unfolded = [ "Margin" ]

[node name="ExitConfirmation" type="ConfirmationDialog" parent="CenterContainer" index="0"]

visible = false
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 540.0
margin_top = 325.0
margin_right = 740.0
margin_bottom = 395.0
rect_min_size = Vector2( 200, 70 )
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
popup_exclusive = true
window_title = "Please Confirm..."
resizable = false
dialog_text = "Are you sure?"
dialog_hide_on_ok = true
_sections_unfolded = [ "Dialog", "Popup" ]

[node name="Buttons" type="VBoxContainer" parent="." index="3"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -240.0
margin_top = -267.0
margin_right = 240.0
margin_bottom = -40.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
mouse_filter = 1
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
custom_constants/separation = 24
alignment = 0
_sections_unfolded = [ "custom_constants" ]

[node name="Start" type="Button" parent="Buttons" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_right = 480.0
margin_bottom = 59.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Start"
flat = false
align = 1

[node name="Options" type="Button" parent="Buttons" index="1"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 83.0
margin_right = 480.0
margin_bottom = 142.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Options"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "Theme" ]

[node name="Exit" type="Button" parent="Buttons" index="2"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_top = 166.0
margin_right = 480.0
margin_bottom = 227.0
rect_pivot_offset = Vector2( 0, 0 )
rect_clip_content = false
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 3
theme = ExtResource( 5 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
text = "Exit"
flat = false
align = 1
_sections_unfolded = [ "Size Flags", "Theme" ]

[connection signal="confirmed" from="CenterContainer/ExitConfirmation" to="." method="quit_game"]

[connection signal="pressed" from="Buttons/Options" to="." method="open_options"]

[connection signal="pressed" from="Buttons/Exit" to="." method="confirm_quit"]


